firehose-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: firehose
  labels:
    app: firehose
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: firehose
        tier: backend
    spec:
      containers:
      - name: firehosecluster
        image: gcr.io/cx-network-204116/firehose
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /beamconfig
      volumes:
      - name: config-volume
        configMap:
          name: vm-config
