firehose-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: firehose-ing
spec:
  backend:
    serviceName: firehose-b8s82
    servicePort: 80
